# gluu-passport-testing

./: .codacy.yml  .gitignore  CHANGELOG.md  README.md  env.sh  passport_init_env.sh  pyproject.toml  requirements.txt  sel_kwargs.py  test.conf
.github/workflows/: version_bump.yaml
data/: attributes.py  db_utils.py  idp_host_data.py  ldif_utils.py  passport_host_data.py  provider_host_data.py  utils.py
data/ldifs/: gluuPassportConfiguration.json  passport.ldif  peoples.ldif
data/ldifs/idp_host/: trust_relationships.ldif
data/ldifs/passport_host/: clients.ldif  gluuPassportConfiguration.json  oxauth.ldif  oxauthDynamicConfig.json  passport.ldif  passport_saml_scripts.ldif  passport_social_scripts.ldif
data/ldifs/provider_host/: metadata-providers.xml  passport_saml.ldif  peoples.ldif  trust_relationships.ldif
data/pylib/: README.md  __init__.py
data/utils/: attributes.py  ldif_utils.py  utils.py
docs/: MAIN.md  SERVERS_SETUP..md  SERVERS_SETUP.md
init_setup/: setup.properties
install/gluu/: install.sh
install/gluu/templates/: setup.properties
saml_setup/: 9gluu  etcletsencrypt.tar  gluu.sh  install_and_setup.sh  setup.py
setup/: 9gluu  certbot.sh  gluu.sh  prepare.sh  setup.properties  setupscript.sh
setup/templates/: README  gluu_https.conf  https_gluu.conf  le-ex.conf  passport-central-config.json  scripts.ldif
tests/helpers/: LICENSE  create_droplet.py  create_test_user.py  create_tr.py  delete_test_user.py  destroy_droplet.py  oidc_helper.py  passport_helper.py  server_up_check.py  setup.py  tr_helper.py  users_helper.py  utils.py
(+13 files in other folders)
