[tool.commitizen]
name = "cz_conventional_commits"
version = "0.12.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]

[tool.poetry]
name = "gluu-passport-testing"
version = "0.12.0"
description = "Stage testing for passport"
authors = ["Christian Eland"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
behave = "^1.2.6"
selenium = "^3.141.0"
pydantic = "^1.6.1"
pydoautomator = "^0.8.3"
PyVirtualDisplay = "^1.3.2"
dataset = "^1.3.2"
ipdb = "^0.13.4"
importlib-metadata = "^2.0.0"

[tool.poetry.dev-dependencies]
commitizen = "^2.4.2"
autopep8 = "^1.5.4"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
